conversation setting and default reaction

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
+# REACT_APP_BACKEND_URL=http://35.247.189.43:8080
+# REACT_APP_BACKEND_WEBSOCKET_URL=http://35.247.189.43:8100
 REACT_APP_BACKEND_URL=http://localhost:8080
 REACT_APP_BACKEND_WEBSOCKET_URL=http://localhost:8100
